--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -42,12 +42,12 @@
 												<br/>
 												<h:outputText value="#{building.location}" styleClass="buildingLocation"></h:outputText>	
 												<br/>		
-												<div class="buildingDivClass" style="padding: 5px">
+												<div class="buildingDivClass" style="padding: 5px" align="left">
 													<p:panel>
 														 <p:tree value="#{building.mainDivision}" var="division" styleClass="divisionAnalysis"
 													                        id="divisionTreeAnalisys" selectionMode="checkbox" dynamic="true">
 													        <p:treeNode>
-													            <h:outputText value="#{division.name}"/>
+													            <h:outputText style="font-size: 12px" value="#{division.name}"/>
 													        </p:treeNode>
 													        <f:attribute name="building" value="#{building}" />
 													        <p:ajax event="select" listener="#{buildingManagementBean.showDivisionOptions}" update="@form" ></p:ajax>
@@ -56,11 +56,22 @@
 													    <p:spacer height="10"></p:spacer>
 													    <p:outputPanel rendered="#{building.mainDivisionIsSelected}"  styleClass="divisionOptions">
 													    	<div align="center">
-													    		<p:commandLink id="idNormandie" oncomplete="PF('newDivisionPopup').show()" ajax="true" update=":newDivisionFormId">
+													    		<p:commandLink oncomplete="PF('newDivisionPopup').show()" ajax="true" update=":newDivisionFormId">
 																	<p:graphicImage value="#{request.contextPath}/../resources/images/plus.png"/>
 																</p:commandLink>
 														    	<p:spacer width="5"/>
-														    	<p:graphicImage value="#{request.contextPath}/../resources/images/negative.png"/>
+														    	<p:commandLink action="#{buildingManagementBean.deleteDivision}" 
+														    		ajax="true" update=":newDivisionFormId"
+														    		oncomplete="	if (args.cantDeleteDivision=== true )
+																					{ 
+																						PF('unSuccessPanelcantDeleteDivision').show();
+																					}
+																					if (args.nodeSelectedNull === true)
+																					{
+																						PF('unSuccessPanelnodeSelectedNull').show();
+																					}">
+														    		<p:graphicImage value="#{request.contextPath}/../resources/images/negative.png"/>
+																</p:commandLink>
 													    	</div>
 													    </p:outputPanel>
 												    </p:panel>
@@ -87,6 +98,14 @@
 		<ui:include src="./popups/newBuildingPopup.xhtml" />
 		<ui:include src="./popups/newDivisionPopup.xhtml" >
 			<ui:param name="parentDivision" value="#{buildingManagementBean.parentDivisionSelected.data.name}" />
+		</ui:include>
+		<ui:include src="./popups/unSuccessDialog.xhtml">
+			<ui:param name="idUnsuccess" value="cantDeleteDivision" />
+			<ui:param name="unSuccessMessage" value="Cant Delete this Division!" />
+		</ui:include>
+		<ui:include src="./popups/unSuccessDialog.xhtml">
+			<ui:param name="idUnsuccess" value="nodeSelectedNull" />
+			<ui:param name="unSuccessMessage" value="Please select a node first, before deleting!" />
 		</ui:include>
 	</ui:define>
 </ui:composition>
