--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -36,49 +36,75 @@
 									<p:column styleClass="dataTableColumn">
 										<p:panel widgetVar="buildingPanelDivision" styleClass="buildingPanelClass">
 											<div align="left" class="buildingDivClass">
-												<h:outputText value="#{building.name}" styleClass="buildingName"></h:outputText>
-												<br/>
-												<h:outputText value="#{building.location}" styleClass="buildingLocation"></h:outputText>	
-												<br/>	
+												<table border="0" class="buildingManagDelete">
+													<tr>
+														<td valign="top" align="left">
+															<h:outputText value="#{building.name}" styleClass="buildingName"></h:outputText>
+															<br/>
+															<h:outputText value="#{building.location}" styleClass="buildingLocation"></h:outputText>	
+														</td>
+														<td valign="top" align="right">
+															<p:graphicImage width="15" styleClass="buildingManagIconClass" value="#{request.contextPath}/../resources/images/error.png"></p:graphicImage>
+															<p:spacer width="5"/>
+															<p:commandLink value="Delete" ajax="false" action="#{buildingManagementBean.deleteBuilding(building)}"></p:commandLink>
+														</td>
+													</tr>
+												</table>
+												<hr/>
 												<div class="buildingDivClass" align="left">
-													<hr/>
-													<p:tree value="#{building.mainDivision}" var="division" styleClass="divisionAnalysis"
-												                        id="divisionTreeAnalisys" selectionMode="checkbox" dynamic="true">
-												        <p:treeNode styleClass="divisionAnalysisNode">
-												            <h:outputText styleClass="treeDivisionText" value="#{division.name}"/>
-												        </p:treeNode>
-												        <f:attribute name="building" value="#{building}" />
-												        <p:ajax event="select" listener="#{buildingManagementBean.showDivisionOptions}" update="@form" ></p:ajax>
-												        <p:ajax event="unselect" listener="#{buildingManagementBean.hideDivisionOptions}" update="@form" ></p:ajax>
-												    </p:tree>
-												    <p:spacer height="15"></p:spacer>
-												    <p:outputPanel rendered="#{building.mainDivisionIsSelected}" >
-												    	<div align="center" class="divisionOptions">
-												    		<p:commandLink oncomplete="PF('newDivisionPopup').show()" ajax="true" update=":newDivisionFormId">
-																<p:graphicImage value="#{request.contextPath}/../resources/images/plus.png"/>
-															</p:commandLink>
-													    	<p:spacer width="5"/>
-													    	<p:commandLink action="#{buildingManagementBean.deleteDivision}"
-													    		oncomplete="	if (args.cantDeleteDivision=== true )
-																				{ 
-																					PF('unSuccessPanelcantDeleteDivision').show();
-																				}
-																				else if (args.nodeSelectedNull === true)
-																				{
-																					PF('unSuccessPanelnodeSelectedNull').show();
-																				}
-																				else PF('successPaneldeleteDivisionPopup').show()">
-													    		<p:graphicImage value="#{request.contextPath}/../resources/images/negative.png"/>
-															</p:commandLink>
-												    	</div>
-												    </p:outputPanel>
+													<h:panelGrid columns="2">
+														<p:column>
+<!-- 															 <p:multiSelectListbox value="#{multiSelectView.selection}" effect="slide" header="Categories" showHeaders="true"> -->
+<!-- 														        <f:selectItems value="#{multiSelectView.categories}" /> -->
+<!-- 														    </p:multiSelectListbox> -->
+															<p:tree value="#{building.mainDivision}" var="division" styleClass="divisionAnalysis"
+														                        id="divisionTreeAnalisys" selectionMode="checkbox" dynamic="true">
+														        <p:treeNode styleClass="divisionAnalysisNode">
+														            <h:outputText styleClass="treeDivisionText" value="#{division.name}"/>
+														        </p:treeNode>
+														        <f:attribute name="building" value="#{building}" />
+														        <p:ajax event="select" listener="#{buildingManagementBean.showDivisionOptions}" update="@form" ></p:ajax>
+														        <p:ajax event="unselect" listener="#{buildingManagementBean.hideDivisionOptions}" update="@form" ></p:ajax>
+														    </p:tree>
+														    <p:spacer height="15"></p:spacer>
+														    <p:outputPanel rendered="#{building.mainDivisionIsSelected}" >
+														    	<div align="center" class="divisionOptions">
+														    		<p:commandLink oncomplete="PF('newDivisionPopup').show()" ajax="true" update=":newDivisionFormId">
+																		<p:graphicImage value="#{request.contextPath}/../resources/images/plus.png"/>
+																	</p:commandLink>
+															    	<p:spacer width="5"/>
+															    	<p:commandLink action="#{buildingManagementBean.deleteDivision}"
+															    		oncomplete="	if (args.cantDeleteDivision=== true )
+																						{ 
+																							PF('unSuccessPanelcantDeleteDivision').show();
+																						}
+																						else if (args.nodeSelectedNull === true)
+																						{
+																							PF('unSuccessPanelnodeSelectedNull').show();
+																						}
+																						else PF('successPaneldeleteDivisionPopup').show()">
+															    		<p:graphicImage value="#{request.contextPath}/../resources/images/negative.png"/>
+																	</p:commandLink>
+														    	</div>
+														    </p:outputPanel>
+														</p:column>
+														<p:column>
+															<p:outputLabel value="Analyzers"></p:outputLabel>
+<!-- 															 <p:selectManyMenu id="advanced" value="#{selectManyView.selectedThemes}" converter="themeConverter" -->
+<!-- 													                          var="t" filter="true" filterMatchMode="contains" showCheckbox="true"> -->
+<!-- 													            <f:selectItems value="#{selectManyView.themes}" var="theme" itemLabel="#{theme.displayName}" itemValue="#{theme}" /> -->
+													 
+<!-- 													            <p:column> -->
+<!-- 													                <h:graphicImage name="showcase/images/themeswitcher/themeswitcher-#{t.name}.png" alt="#{t.name}" styleClass="ui-theme" /> -->
+<!-- 													            </p:column> -->
+													             
+<!-- 													            <p:column> -->
+<!-- 													                <h:outputText value="#{t.displayName}" /> -->
+<!-- 													            </p:column> -->
+<!-- 													        </p:selectManyMenu> -->
+														</p:column>
+												    </h:panelGrid>
 												</div>
-											</div>
-											<br/>
-											<div align="right" class="buildingManagDelete">
-												<p:graphicImage width="15" styleClass="buildingManagIconClass" value="#{request.contextPath}/../resources/images/error.png"></p:graphicImage>
-												<p:spacer width="5"/>
-												<p:commandLink value="Delete" ajax="false" action="#{buildingManagementBean.deleteBuilding(building)}"></p:commandLink>
 											</div>
 										</p:panel>
 									</p:column>
