--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -53,34 +53,34 @@
 												<hr/>
 												<div class="buildingDivClass" align="left">
 													<h:panelGrid columns="2">
-														<p:column>
- 															 <p:multiSelectListbox value="#{buildingManagementBean.selectedDivision}" effect="slide" header="Divisions" showHeaders="true">
- 														        <f:selectItems value="#{building.divisions}" />
- 														    </p:multiSelectListbox>
+														<p:column style="vertical-align:top">
+															<p:outputPanel rendered="#{not empty building.divisions}">
+	 															 <p:multiSelectListbox value="#{buildingManagementBean.selectedDivision}" effect="slide" header="Divisions" showHeaders="true">
+	 														        <f:selectItems value="#{building.divisions}" />
+	 														    </p:multiSelectListbox>
+															</p:outputPanel>	
+															<p:outputPanel rendered="#{empty building.divisions or building.divisions.size() eq 0}">
+																<p:graphicImage value="#{request.contextPath}/../resources/images/plus.png" update=":newDivisionFormId"/>
+																<p:spacer width="5"/>
+																<p:commandLink oncomplete="PF('newDivisionPopup').show()" 
+																			   action="#{buildingManagementBean.setNewDivisionBuilding(building.buildingid)}" ajax="true" value="Add Division">
+																</p:commandLink>
+															</p:outputPanel>
 														    <p:spacer height="15"></p:spacer>
-														    <p:outputPanel rendered="#{building.mainDivisionIsSelected}" >
-														    	<div align="center" class="divisionOptions">
+														    <p:outputPanel rendered="not empty buildingManagementBean.selectedDivision">
+														    	<div align="left" class="divisionOptions">
 														    		<p:commandLink oncomplete="PF('newDivisionPopup').show()" ajax="true" update=":newDivisionFormId">
 																		<p:graphicImage value="#{request.contextPath}/../resources/images/plus.png"/>
 																	</p:commandLink>
 															    	<p:spacer width="5"/>
 															    	<p:commandLink action="#{buildingManagementBean.deleteDivision}"
-															    		oncomplete="	if (args.cantDeleteDivision=== true )
-																						{ 
-																							PF('unSuccessPanelcantDeleteDivision').show();
-																						}
-																						else if (args.nodeSelectedNull === true)
-																						{
-																							PF('unSuccessPanelnodeSelectedNull').show();
-																						}
-																						else PF('successPaneldeleteDivisionPopup').show()">
+															    		oncomplete="PF('successPaneldeleteDivisionPopup').show()">
 															    		<p:graphicImage value="#{request.contextPath}/../resources/images/negative.png"/>
 																	</p:commandLink>
 														    	</div>
 														    </p:outputPanel>
 														</p:column>
 														<p:column>
-															<p:outputLabel value="Analyzers"></p:outputLabel>
 <!-- 															 <p:selectManyMenu id="advanced" value="#{selectManyView.selectedThemes}" converter="themeConverter" -->
 <!-- 													                          var="t" filter="true" filterMatchMode="contains" showCheckbox="true"> -->
 <!-- 													            <f:selectItems value="#{selectManyView.themes}" var="theme" itemLabel="#{theme.displayName}" itemValue="#{theme}" /> -->
