--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -10,118 +10,119 @@
 	<ui:define name="body">
 		<ui:include src="./general/menutab.xhtml" />
 		<div class="buildingManagementDiv">
-			<table width="100%" class="appDivClass">
-				<tr>
-					<td>
-						<div align="center" class="titleDivClass">
-							<p:outputLabel value="Building Management"></p:outputLabel>
-						</div>
-						<hr />
-					</td>
-				</tr>
-				<tr>
-					<td width="100%">
-						<div align="left" class="mainDivClass">
-							<p:commandLink value="Add Building" styleClass="commonLink" onclick="PF('newBuildingPopup').show()"></p:commandLink>
-							<br/>
-							<br/>
-							<h:form id="buildingManagementForm">
-								<p:dataTable id="paginatorSelector"
-									widgetVar="paginatorSelector" paginator="true"
-									paginatorPosition="bottom"
-									paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-									value="#{buildingManagementBean.buildingsToShow}" rows="10"
-									rowKey="#{building.buildingId}" var="building"
-									styleClass="buildingManagementTable">
-									<p:column styleClass="dataTableColumn">
-										<p:panel widgetVar="buildingPanelDivision" id="buildingPanelDivision" styleClass="buildingPanelClass">
-											<div align="left" class="buildingDivClass">
-												<table border="0" class="buildingManagDelete">
-													<tr>
-														<td valign="top" align="left">
-															<h:outputText value="#{building.name}" styleClass="buildingName"></h:outputText>
-															<br/>
-															<h:outputText value="#{building.location}" styleClass="buildingLocation"></h:outputText>	
-														</td>
-														<td valign="top" align="right">
-															<p:graphicImage width="15" styleClass="buildingManagIconClass" value="#{request.contextPath}/../resources/images/error.png"></p:graphicImage>
-															<p:spacer width="5"/>
-															<p:commandLink value="Delete" ajax="false" action="#{buildingManagementBean.deleteBuilding(building)}"></p:commandLink>
-														</td>
-													</tr>
-												</table>
-												<hr/>
-												<div class="buildingDivClass" align="left">
-													<h:panelGrid columns="2">
-														<p:column style="vertical-align:top">
-															<p:outputPanel rendered="#{not empty building.rootDivision.children}">
-		 														<p:tree value="#{building.rootDivision}" var="division" styleClass="divisionAnalysis"
-															                        id="divisionTreeAnalisys" selectionMode="single" dynamic="true">
-															        <p:treeNode styleClass="divisionAnalysisNode">
-															            <h:outputText styleClass="treeDivisionText" value="#{division.name}"/>
-															        </p:treeNode>
-															        <f:attribute name="building" value="#{building}" />
-															        <p:ajax event="select" listener="#{buildingManagementBean.showDivisionOptions}" update=":newDivisionFormId :buildingManagementForm:paginatorSelector:divOptionsPanel" ></p:ajax>
-															        <p:ajax event="unselect" listener="#{buildingManagementBean.hideDivisionOptions}" update=":newDivisionFormId :buildingManagementForm:paginatorSelector:divOptionsPanel" ></p:ajax>
-															    </p:tree>
-															    <br/>
-															</p:outputPanel>	
-														</p:column>
-														<p:column>
-<!-- 															 <p:selectManyMenu id="advanced" value="#{selectManyView.selectedThemes}" converter="themeConverter" -->
-<!-- 													                          var="t" filter="true" filterMatchMode="contains" showCheckbox="true"> -->
-<!-- 													            <f:selectItems value="#{selectManyView.themes}" var="theme" itemLabel="#{theme.displayName}" itemValue="#{theme}" /> -->
-													 
-<!-- 													            <p:column> -->
-<!-- 													                <h:graphicImage name="showcase/images/themeswitcher/themeswitcher-#{t.name}.png" alt="#{t.name}" styleClass="ui-theme" /> -->
-<!-- 													            </p:column> -->
-													             
-<!-- 													            <p:column> -->
-<!-- 													                <h:outputText value="#{t.displayName}" /> -->
-<!-- 													            </p:column> -->
-<!-- 													        </p:selectManyMenu> -->
-														</p:column>
-												    </h:panelGrid>
-												    <p:outputPanel id="divOptionsPanel" widgetVar="divOptionsPanel">
-												    	<br/>
-														<table class="addDivisionClass">
-															<tr>
-																<td width="15px" valign="middle">
-																	<p:graphicImage width="12px" value="#{request.contextPath}/../resources/images/plus.png"/>
-																</td>
-																<td align="left" width="90px">
-																	<p:commandLink oncomplete="PF('newDivisionPopup').show()" 
-																	   action="#{buildingManagementBean.setNewDivisionBuilding(building.buildingid)}" 
-																	   ajax="true" value="Add Division" update=":newDivisionFormId"></p:commandLink>
-																</td>
-																<td width="15px" valign="middle" align="left">
-																	<p:graphicImage width="12px" rendered="#{not empty buildingManagementBean.parentDivisionSelected}" value="#{request.contextPath}/../resources/images/negative.png"/>
-																</td>
-																<td align="left"> 
-																	<p:commandLink rendered="#{not empty buildingManagementBean.parentDivisionSelected}" action="#{buildingManagementBean.deleteDivision(building.buildingid)}"
-															    		oncomplete="PF('successPaneldeleteDivisionPopup').show()" value="Remove Division">
-																	</p:commandLink>
-																</td>
-															</tr>
-														</table>
-														<br/>
-													</p:outputPanel>
-												</div>
-											</div>
-										</p:panel>
-									</p:column>
-								</p:dataTable>
-							</h:form>
-						</div>
-					</td>
-				</tr>
-			</table>
-			<br/>
-			<br/>
+			<div align="center" class="titleDivClass">
+				<p:outputLabel value="Building Management"></p:outputLabel>
+			</div>
+			<hr />
+			<div align="center" class="mainDivClass">
+				<p:commandLink value="Add Building" styleClass="commonLink"
+					onclick="PF('newBuildingPopup').show()"></p:commandLink>
+				<br /> 
+				<br />
+				<h:form id="buildingManagementForm">
+					<p:dataTable id="paginatorSelector" widgetVar="paginatorSelector"
+						paginator="true" paginatorPosition="bottom"
+						paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+						value="#{buildingManagementBean.buildingsToShow}" rows="10"
+						rowKey="#{building.buildingId}" var="building"
+						styleClass="buildingManagementTable">
+						<p:column styleClass="dataTableColumn">
+							<p:panel widgetVar="buildingPanelDivision"
+								id="buildingPanelDivision" styleClass="buildingPanelClass">
+								<div align="left" class="buildingDivClass">
+									<table border="0" class="buildingManagDelete">
+										<tr>
+											<td valign="top" align="left"><h:outputText
+													value="#{building.name}" styleClass="buildingName"></h:outputText>
+												<br /> <h:outputText value="#{building.location}"
+													styleClass="buildingLocation"></h:outputText></td>
+											<td valign="top" align="right"><p:graphicImage
+													width="15" styleClass="buildingManagIconClass"
+													value="#{request.contextPath}/../resources/images/error.png"></p:graphicImage>
+												<p:spacer width="5" /> <p:commandLink value="Delete"
+													ajax="false"
+													action="#{buildingManagementBean.deleteBuilding(building)}"></p:commandLink>
+											</td>
+										</tr>
+									</table>
+									<hr />
+									<div class="buildingDivClass">
+										<h:panelGrid columns="2">
+											<p:column style="vertical-align:top">
+												<p:outputPanel
+													rendered="#{not empty building.rootDivision.children}">
+													<p:tree value="#{building.rootDivision}" var="division"
+														styleClass="divisionAnalysis" id="divisionTreeAnalisys"
+														selectionMode="single" dynamic="true">
+														<p:treeNode styleClass="divisionAnalysisNode">
+															<h:outputText styleClass="treeDivisionText"
+																value="#{division.name}" />
+														</p:treeNode>
+														<f:attribute name="building" value="#{building}" />
+														<p:ajax event="select"
+															listener="#{buildingManagementBean.showDivisionOptions}"
+															update=":newDivisionFormId :buildingManagementForm:paginatorSelector:divOptionsPanel"></p:ajax>
+														<p:ajax event="unselect"
+															listener="#{buildingManagementBean.hideDivisionOptions}"
+															update=":newDivisionFormId :buildingManagementForm:paginatorSelector:divOptionsPanel"></p:ajax>
+													</p:tree>
+													<br />
+												</p:outputPanel>
+											</p:column>
+											<p:column>
+												<!-- 															 <p:selectManyMenu id="advanced" value="#{selectManyView.selectedThemes}" converter="themeConverter" -->
+												<!-- 													                          var="t" filter="true" filterMatchMode="contains" showCheckbox="true"> -->
+												<!-- 													            <f:selectItems value="#{selectManyView.themes}" var="theme" itemLabel="#{theme.displayName}" itemValue="#{theme}" /> -->
+
+												<!-- 													            <p:column> -->
+												<!-- 													                <h:graphicImage name="showcase/images/themeswitcher/themeswitcher-#{t.name}.png" alt="#{t.name}" styleClass="ui-theme" /> -->
+												<!-- 													            </p:column> -->
+
+												<!-- 													            <p:column> -->
+												<!-- 													                <h:outputText value="#{t.displayName}" /> -->
+												<!-- 													            </p:column> -->
+												<!-- 													        </p:selectManyMenu> -->
+											</p:column>
+										</h:panelGrid>
+										<p:outputPanel id="divOptionsPanel" widgetVar="divOptionsPanel">
+											<br />
+											<table class="addDivisionClass">
+												<tr>
+													<td width="15px" valign="middle"><p:graphicImage
+															width="12px"
+															value="#{request.contextPath}/../resources/images/plus.png" />
+													</td>
+													<td align="left" width="90px"><p:commandLink
+															oncomplete="PF('newDivisionPopup').show()"
+															action="#{buildingManagementBean.setNewDivisionBuilding(building.buildingid)}"
+															ajax="true" value="Add Division"
+															update=":newDivisionFormId"></p:commandLink></td>
+													<td width="15px" valign="middle" align="left"><p:graphicImage
+															width="12px"
+															rendered="#{not empty buildingManagementBean.parentDivisionSelected}"
+															value="#{request.contextPath}/../resources/images/negative.png" />
+													</td>
+													<td align="left"><p:commandLink
+															rendered="#{not empty buildingManagementBean.parentDivisionSelected}"
+															action="#{buildingManagementBean.deleteDivision(building.buildingid)}"
+															oncomplete="PF('successPaneldeleteDivisionPopup').show()"
+															value="Remove Division">
+														</p:commandLink></td>
+												</tr>
+											</table>
+											<br />
+										</p:outputPanel>
+									</div>
+								</div>
+							</p:panel>
+						</p:column>
+					</p:dataTable>
+				</h:form>
+			</div>
 		</div>
 		<ui:include src="./general/footer.xhtml" />
 		<ui:include src="./popups/newBuildingPopup.xhtml" />
-		<ui:include src="./popups/newDivisionPopup.xhtml" >
+		<ui:include src="./popups/newDivisionPopup.xhtml">
 			<ui:param name="parentDivision" value="parentName" />
 		</ui:include>
 		<ui:include src="./popups/unSuccessDialog.xhtml">
@@ -130,13 +131,15 @@
 		</ui:include>
 		<ui:include src="./popups/unSuccessDialog.xhtml">
 			<ui:param name="idUnsuccess" value="nodeSelectedNull" />
-			<ui:param name="unSuccessMessage" value="Please select a node first, before deleting!" />
+			<ui:param name="unSuccessMessage"
+				value="Please select a node first, before deleting!" />
 		</ui:include>
 		<ui:include src="./popups/successDialog.xhtml">
 			<ui:param name="id" value="deleteDivisionPopup" />
 			<ui:param name="successMessage"
 				value="The division was deleted successfully!" />
-			<ui:param name="path" value="buildingManagement.xhtml?faces-redirect=true" />
+			<ui:param name="path"
+				value="buildingManagement.xhtml?faces-redirect=true" />
 		</ui:include>
 	</ui:define>
 </ui:composition>
