--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -70,7 +70,7 @@
 												</p:outputPanel>
 											</p:column>
 											<p:column style="vertical-align: top">
-												<p:selectManyMenu id="advanced" value="#{buildingManagementBean.selectedAnalyzers}" filter="true" filterMatchMode="contains" showCheckbox="true">
+												<p:selectManyMenu id="advanced" value="#{buildingManagementBean.analyzersToRemove}" filter="true" filterMatchMode="contains" showCheckbox="true">
 										           <f:selectItems value="#{buildingManagementBean.analyzersDivisionSelection}" var="analyzer" itemLabel="#{analyzer.label}" itemValue="#{analyzer.value}" />
 										        </p:selectManyMenu>
 											</p:column>
@@ -123,7 +123,10 @@
 		</div>
 		<ui:include src="./general/footer.xhtml" />
 		<ui:include src="./popups/newBuildingPopup.xhtml" />
-		<ui:include src="./popups/selectionPopupAnalyzer.xhtml" />
+		<ui:include src="./popups/selectionPopupAnalyzer.xhtml" >
+			<ui:param value="#{buildingManagementBean}" name="bean" />
+			<ui:param value="Add" name="operation"/>
+		</ui:include>
 		<ui:include src="./popups/newDivisionPopup.xhtml">
 			<ui:param name="parentDivision" value="parentName" />
 		</ui:include>
