--- a/src/main/webapp/pages/popups/selectionPopupAnalyzer.xhtml
+++ b/src/main/webapp/pages/popups/selectionPopupAnalyzer.xhtml
@@ -11,24 +11,24 @@
 		<p:dialog widgetVar="selectionPopupAnalyzer" dynamic="true"
 			id="selectionPopupAnalyzer" width="400px" modal="true"
 			position="center center" draggable="false" closable="true"
-			header="Select Analyzer" closeOnEscape="true" resizable="false">
+			header="#{operation} Analyzer" closeOnEscape="true" resizable="false">
 			<h:form id="selectionAnalyzerForm">
 				<p:dataTable id="paginatorSelector" widgetVar="paginatorSelector"
 					styleClass="buildingSelectionCSS" paginator="true"
 					paginatorPosition="bottom"
 					paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-					value="#{analysisBean.analyzersSelected}"
+					value="#{bean.analyzersSelected}"
 					rows="10" rowKey="#{analyzer.analyzerId}" var="analyzer"
 					selectionMode="single"
-					selection="#{analysisBean.tempAnalyzerSelected}">
+					selection="#{bean.tempAnalyzerSelected}">
 					<p:column styleClass="dataTableColumn">
 						<h:outputText value="#{analyzer.codeName}"></h:outputText>
 					</p:column>
 				</p:dataTable>
 				<br />
 				<div align="center">
-					<p:commandButton value="Select" ajax="false" type="submit" styleClass="signButton"
-						action="#{analysisBean.selectAnalyzer}" />
+					<p:commandButton value="#{operation}" ajax="false" type="submit" styleClass="signButton"
+						action="#{bean.selectAnalyzer}" />
 				</div>
 			</h:form>
 		</p:dialog>
