Add analyzers to Division

--- a/src/main/webapp/pages/analysis.xhtml
+++ b/src/main/webapp/pages/analysis.xhtml
@@ -302,6 +302,7 @@
 		<ui:include src="./popups/selectionPopupAnalyzer.xhtml" >
 			<ui:param name="bean" value="#{analysisBean}" />
 			<ui:param name="operation" value="Select"/>
+			<ui:param value="single" name="selectionMode"/>
 		</ui:include>
 	</ui:define>
 </ui:composition>
