--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -126,6 +126,7 @@
 		<ui:include src="./popups/selectionPopupAnalyzer.xhtml" >
 			<ui:param value="#{buildingManagementBean}" name="bean" />
 			<ui:param value="Add" name="operation"/>
+			<ui:param value="multiple" name="selectionMode"/>
 		</ui:include>
 		<ui:include src="./popups/newDivisionPopup.xhtml">
 			<ui:param name="parentDivision" value="parentName" />
