--- a/src/main/webapp/pages/popups/selectionPopupBuilding.xhtml
+++ b/src/main/webapp/pages/popups/selectionPopupBuilding.xhtml
@@ -27,7 +27,7 @@
 				</p:dataTable>
 				<br />
 				<div align="center">
-					<p:commandButton value="Select" ajax="false" type="submit" styleClass="signButton"
+					<p:commandButton value="Select" ajax="false" styleClass="signButton"
 						action="#{analysisBean.selectBuilding}" />
 				</div>
 			</h:form>
