--- a/src/main/webapp/pages/general/footer.xhtml
+++ b/src/main/webapp/pages/general/footer.xhtml
@@ -8,10 +8,16 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="../template/ui.xhtml">
 	<ui:define name="body">
-		<div align="center" class="footer">
-			<b><p:outputLabel value="© Copyright 2018 CLBProject" /></b>
-			<br/>
-			<p:outputLabel style="font-size: 10px" value="All rights reserved"></p:outputLabel>
+		<div  class="p-grid footer">
+			<div class="p-col-12 p-justify-center">
+					<b><p:outputLabel value="© Copyright 2018 CLBProject" /></b>
+			</div>
+
+			<div class="p-col">
+					<p:outputLabel value="All rights reserved"></p:outputLabel>
+			</div>
+			
+			
 		</div>
 	</ui:define>
 </ui:composition>
