adding ftp docker container

--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -114,6 +114,7 @@
 															value="#{request.contextPath}/../resources/images/search.png" />
 													</td>
 													<td align="left"><p:commandLink rendered="#{not empty buildingManagementBean.parentDivisionSelected}"
+														 	action="#{buildingManagementBean.loadNewAnalyzers()}"
 															oncomplete="PF('selectionPopupAnalyzer').show()"
 															ajax="true" value="Add Analyzer"
 															update=":selectionAnalyzerForm">
